# mempalace

./: .gitignore  README.md  pyproject.toml
mempalace/: __init__.py  __main__.py  _compat.py  backup.py  core.py
tests/: test_mempalace.py
