[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mempalace"
version = "1.0.0"
description = "MemPalace — standalone AI memory system with ChromaDB + SQLite KG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "MemPalace"}
]
keywords = ["memory", "ai", "chromadb", "knowledge-graph", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/mars82311111/mempalace"
Repository = "https://github.com/mars82311111/mempalace"

[tool.setuptools.packages.find]
where = ["."]
include = ["mempalace*"]
